Hover option, Fixed dark mode

--- a/frontend/src/pages/PageStyles.css
+++ b/frontend/src/pages/PageStyles.css
@@ -59,6 +59,7 @@ textarea {
 }
 
 .caret {
+  color: black;
   margin-left: 5px;
   font-size: 10px;
 }
@@ -355,7 +356,8 @@ html, body {
 }
 
 .cheat-sheet-content {
-  background-color: #fff;
+  background-color: var(--bg-color);     /* updated */
+  color: var(--text-color);  
   padding: 30px;
   border-radius: 12px;
   width: 95%;
